--- a/index.html
+++ b/index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./src/output.css">
 </head>
+
 <body>
-    
+    <div class="div1 lg:w-[1536px] lg:h-[40px] lg:justify-around lg:gap-140 lg:items-center  md:w-[768px] md:h-[40px] md:text-[14px] m-auto md:justify-between w-[375px] h-[40px] text-[#FFFFFF] gap-[38px] text-[12px] font-[400]  bg-[#673A44] flex items-center justify-around">
+
+        <div class="flex items-center  gap-[15px] md:ml-[39px]">
+            <p>Кабинет метролога</p>
+            <p>Цены</p>
+            <p>Попробовать</p>
+        </div>
+
+        <div class="flex gap-[9px] md:mr-[30px] items-center">
+            <img src="./login 1.png" alt="">
+
+            <p>Войти</p>
+        </div>
+    </div>
 </body>
+
 </html>
