--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./src/output.css">
 </head>
 
-<body>
+<body class=" m-auto">
     <div class="div1 lg:w-[1536px] lg:h-[40px] lg:justify-around lg:gap-140 lg:items-center  md:w-[768px] md:h-[40px] md:text-[14px] m-auto md:justify-between w-[375px] h-[40px] text-[#FFFFFF] gap-[38px] text-[12px] font-[400]  bg-[#673A44] flex items-center justify-around">
 
         <div class="flex items-center  gap-[15px] md:ml-[39px]">
@@ -23,6 +23,11 @@
             <p>Войти</p>
         </div>
     </div>
+
+    <div class="div2 lg:w-[1536px] md:w-[768px]  m-auto w-[375px] h-[80px] bg-[#F2F2F2] flex justify-start items-center">
+        <img class=" lg:ml-[175px] md:ml-[39px]  w-[197px] h-[47px]" src="./image 1.png" alt="">
+    </div>
+    
 </body>
 
 </html>
