--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 
 <body class=" m-auto">
-    <div class="div1 lg:w-[1536px] lg:h-[40px] lg:justify-around lg:gap-140 lg:items-center  md:w-[768px] md:h-[40px] md:text-[14px] m-auto md:justify-between w-[375px] h-[40px] text-[#FFFFFF] gap-[38px] text-[12px] font-[400]  bg-[#673A44] flex items-center justify-around">
+    <div
+        class="div1 lg:w-[1521px] lg:h-[40px] lg:justify-around lg:gap-140 lg:items-center  md:w-[768px] md:h-[40px] md:text-[14px] m-auto md:justify-between w-[375px] h-[40px] text-[#FFFFFF] gap-[38px] text-[12px] font-[400]  bg-[#673A44] flex items-center justify-around">
 
         <div class="flex items-center  gap-[15px] md:ml-[39px]">
             <p>Кабинет метролога</p>
@@ -24,10 +25,64 @@
         </div>
     </div>
 
-    <div class="div2 lg:w-[1536px] md:w-[768px]  m-auto w-[375px] h-[80px] bg-[#F2F2F2] flex justify-start items-center">
+    <div
+        class="div2 lg:w-[1521px] md:w-[768px]  m-auto w-[375px] h-[80px] bg-[#F2F2F2] flex justify-start items-center">
         <img class=" lg:ml-[175px] md:ml-[39px]  w-[197px] h-[47px]" src="./image 1.png" alt="">
     </div>
-    
+
+    <div class="div3 lg:w-[1521px] lg:h-[1000px] lg:pt-[100px] md:pt-[100px]  md:w-[768px] md:h-[363px] m-auto md:items-center  w-[375px] h-[1000px] pt-[34px] ">
+        <div class=" md:flex md:flex-row-reverse md:justify-center lg:items-center">
+            <img class=" lg:w-[599px] lg:h-[568px] md:w-[382.8116149902344px] md:h-[363px]  md:mt-[-35px] md:m-[0px] md:p-[0px] w-[274px] h-[259.8197021484375px]  m-auto pt-[34px]" src="./Frame (9).png" alt="">
+
+            <div class=" lg:px-5 lg:w-[580px] lg:h-[430px] md:w-[390px] md:h-[363px] md:mt-[-35px] md:m-[0px] w-[375px] h-[240px]  mt-[26px]">
+
+                <h2 class=" lg:text-[60px] font-[700] px-5 md:p-[0px] md:text-[50px] text-[36px] font-[400] mb-[15px]">Кабинет метролога</h2>
+
+                <p class="lg:text-[24px] md:text-[21px] md:text-start text-center text-[14px] font-[400] ">
+                    Онлайн-сервис для сопровождения деятельности метрологических лабораторий
+
+                </p>
+
+                <button
+                    class=" lg:w-[420px] lg:h-[72px] w-[307px] h-[60px] md:m-[0px] md:mt-11 m-[32px] bg-[#843546] border-[1px] border-solid border-[#6A3B45]  rounded-[6px]">
+                    <p class=" lg:text-[21px] text-[16px] font-[600] text-[white] ">Попробовать бесплатно</p>
+                </button>
+            </div>
+
+        </div>
+
+        <div class="div3tah md:flex md:gap-[0px] md:m-[0px] md:p-[0px] ">
+            <div
+                class=" lg:w-[697px] lg:h-[263px] md:w-[330px] md:h-[200px] md:items-start w-[346px] h-[137px] gap-[30px] flex justify-around items-center rounded-[25px] bg-[#FFFFFF] shadow-[0px_ 0px_30px_10px] shadow-2xl shadow-[gray] m-auto mt-[80px] ">
+
+                <div class="p-5 lg:w-[421px] lg:h-[158px] ">
+                    <h2 class="lg:text-[40px] lg:mb-2 font-[700]  md:text-[24px]  md:mb-5 text-[21px]">Главному метрологу</h2>
+                    <p class="lg:text-[24px] lg:mb-2 md:text-[16px] text-[#575757]">
+                        Легко заводить первичку, работать с бухгалтером или вести учет самому
+
+                    </p>
+                </div>
+
+                <img class="w-[40px] h-[40px] mr-[14px]  md:mt-8" src="./Group 1 (1).png" alt="">
+
+            </div>
+
+            <div
+                class=" lg:w-[697px] lg:h-[263px] md:w-[330px] md:h-[200px] md:items-start w-[346px] h-[137px] gap-[30px] flex justify-around items-center rounded-[25px] bg-[#FFFFFF] shadow-[0px_ 0px_30px_10px] shadow-2xl shadow-[gray]  m-auto mt-[42px] ">
+
+                <div class="p-5 lg:w-[421px] lg:h-[158px]">
+                    <h2 class=" lg:text-[40px] lg:mb-2 font-[700] md:text-[24px] md:mb-5 text-[21px]">Метрологической службе</h2>
+                    <p class=" lg:text-[24px] lg:mb-2 md:text-[16px] text-[#575757]">
+                        Легко заводить первичку, работать с бухгалтером или вести учет самому
+                    </p>
+                </div>
+
+                <img class="w-[40px] h-[40px] mr-[14px] md:mt-8" src="./Group 1 (1).png" alt="">
+
+            </div>
+        </div>
+
+    </div>
 </body>
 
 </html>
