--- a/index.html
+++ b/index.html
@@ -30,13 +30,17 @@
         <img class=" lg:ml-[175px] md:ml-[39px]  w-[197px] h-[47px]" src="./image 1.png" alt="">
     </div>
 
-    <div class="div3 lg:w-[1521px] lg:h-[1000px] lg:pt-[100px] md:pt-[100px]  md:w-[768px] md:h-[363px] m-auto md:items-center  w-[375px] h-[1000px] pt-[34px] ">
+    <div
+        class="div3 lg:w-[1521px] lg:h-[640px] lg:pt-[100px] md:pt-[100px]  md:w-[768px] md:h-[363px] md:mb-[460px] m-auto md:items-center  w-[375px] h-[1000px] pt-[34px] ">
         <div class=" md:flex md:flex-row-reverse md:justify-center lg:items-center">
-            <img class=" lg:w-[599px] lg:h-[568px] md:w-[382.8116149902344px] md:h-[363px]  md:mt-[-35px] md:m-[0px] md:p-[0px] w-[274px] h-[259.8197021484375px]  m-auto pt-[34px]" src="./Frame (9).png" alt="">
+            <img class=" lg:w-[599px] lg:h-[568px] md:w-[382.8116149902344px] md:h-[363px]  md:mt-[-35px] md:m-[0px] md:p-[0px] w-[274px] h-[259.8197021484375px]  m-auto pt-[34px]"
+                src="./Frame (9).png" alt="">
 
-            <div class=" lg:px-5 lg:w-[580px] lg:h-[430px] md:w-[390px] md:h-[363px] md:mt-[-35px] md:m-[0px] w-[375px] h-[240px]  mt-[26px]">
+            <div
+                class=" lg:px-5 lg:w-[580px] lg:h-[430px] md:w-[390px] md:h-[363px] md:mt-[-35px] md:m-[0px] w-[375px] h-[240px]  mt-[26px]">
 
-                <h2 class=" lg:text-[60px] font-[700] px-5 md:p-[0px] md:text-[50px] text-[36px] font-[400] mb-[15px]">Кабинет метролога</h2>
+                <h2 class=" lg:text-[60px] font-[700] px-5 md:p-[0px] md:text-[50px] text-[36px] font-[400] mb-[15px]">
+                    Кабинет метролога</h2>
 
                 <p class="lg:text-[24px] md:text-[21px] md:text-start text-center text-[14px] font-[400] ">
                     Онлайн-сервис для сопровождения деятельности метрологических лабораторий
@@ -44,19 +48,20 @@
                 </p>
 
                 <button
-                    class=" lg:w-[420px] lg:h-[72px] w-[307px] h-[60px] md:m-[0px] md:mt-11 m-[32px] bg-[#843546] border-[1px] border-solid border-[#6A3B45]  rounded-[6px]">
+                    class=" lg:w-[420px] lg:h-[72px] w-[307px] h-[60px] md:m-[0px] md:mt-11 m-[32px]  bg-[#843546] border-[1px] border-solid border-[#6A3B45]  rounded-[6px]">
                     <p class=" lg:text-[21px] text-[16px] font-[600] text-[white] ">Попробовать бесплатно</p>
                 </button>
             </div>
 
         </div>
 
-        <div class="div3tah md:flex md:gap-[0px] md:m-[0px] md:p-[0px] ">
+        <div class="div3tah md:flex  md:gap-[0px] md:m-[0px] md:p-[0px] ">
             <div
-                class=" lg:w-[697px] lg:h-[263px] md:w-[330px] md:h-[200px] md:items-start w-[346px] h-[137px] gap-[30px] flex justify-around items-center rounded-[25px] bg-[#FFFFFF] shadow-[0px_ 0px_30px_10px] shadow-2xl shadow-[gray] m-auto mt-[80px] ">
+                class=" lg:w-[697px] lg:h-[263px] md:w-[330px] md:h-[200px] md:mt-[45px] md:items-start w-[346px] h-[137px] gap-[30px] flex justify-around items-center rounded-[25px] bg-[#FFFFFF] shadow-[0px_ 0px_30px_10px] shadow-2xl shadow-[gray] m-auto mt-[80px] ">
 
-                <div class="p-5 lg:w-[421px] lg:h-[158px] ">
-                    <h2 class="lg:text-[40px] lg:mb-2 font-[700]  md:text-[24px]  md:mb-5 text-[21px]">Главному метрологу</h2>
+                <div class="p-5  lg:w-[421px] lg:h-[158px] md:p-[20px]  ">
+                    <h2 class="lg:text-[40px] lg:mb-2 font-[700]   md:text-[24px]  md:mb-5 text-[21px]">Главному
+                        метрологу</h2>
                     <p class="lg:text-[24px] lg:mb-2 md:text-[16px] text-[#575757]">
                         Легко заводить первичку, работать с бухгалтером или вести учет самому
 
@@ -71,7 +76,8 @@
                 class=" lg:w-[697px] lg:h-[263px] md:w-[330px] md:h-[200px] md:items-start w-[346px] h-[137px] gap-[30px] flex justify-around items-center rounded-[25px] bg-[#FFFFFF] shadow-[0px_ 0px_30px_10px] shadow-2xl shadow-[gray]  m-auto mt-[42px] ">
 
                 <div class="p-5 lg:w-[421px] lg:h-[158px]">
-                    <h2 class=" lg:text-[40px] lg:mb-2 font-[700] md:text-[24px] md:mb-5 text-[21px]">Метрологической службе</h2>
+                    <h2 class=" lg:text-[40px] lg:mb-2 font-[700] md:text-[24px] md:mb-5 text-[21px]">Метрологической
+                        службе</h2>
                     <p class=" lg:text-[24px] lg:mb-2 md:text-[16px] text-[#575757]">
                         Легко заводить первичку, работать с бухгалтером или вести учет самому
                     </p>
@@ -81,6 +87,72 @@
 
             </div>
         </div>
+
+    </div>
+
+
+    <div class="div4 lg:w-[1290px] lg:h-[1290px] md:w-[690px] md:h-[1070px] m-auto w-[375px] h-[1000px] ">
+
+        <h2 class="md:text-[40px] font-bold text-[26px] font-bold text-center px-[30px] pt-5 pb-[30px]">Простой дружелюбный сервис</h2>
+
+        <div class=" lg:w-[1290px] lg:h-[470px] lg:flex lg:justify-between md:w-[690px] md:h-[490px] md:flex-wrap m-auto  w-[346px] h-[640px] ">
+            <div
+                class=" lg:w-[410px] lg:h-[470px] lg:flex-col lg:items-start lg:justify-center lg:gap-[30px]  md:w-[690px] md:h-[149px] md:flex md:items-center md:justify-center w-[346px] h-[187px] bg-[#FFFFFF] shadow-[0px_ 0px_30px_10px] shadow-2xl shadow-[gray] rounded-[25px] ">
+
+                <div class="pt-[24px]">
+                    <img class="lg:w-[102px] lg:h-[102px] lg:ml-10 md:w-[81px] md:h-[81px] w-[57px] h-[57px] ml-5 " src="./online-test 1.png" alt="">
+                </div>
+
+                <div class=" lg:w-[302px] lg:h-[276px] md:pl-5">
+                    <h3 class="lg:text-[36px] lg:mb-5 md:text-[24px] text-[21px] font-bold ml-5">Работает онлайн</h3>
+
+                    <p class="lg:text-[20px] md:text-[16px] text-[14px] font-[400] text-[#575757] px-5">
+                        Веб-сервис работает везде, где есть интернет. Обновляется бесплатно, автоматически
+
+                    </p>
+                </div>
+            </div>
+
+            <div
+                class=" lg:w-[410px] lg:h-[470px] lg:flex-col lg:items-start lg:justify-center lg:gap-[30px] lg:m-[0px]  md:w-[690px] md:h-[149px] w-[346px] h-[187px] md:flex md:items-center md:justify-center my-5 bg-[#FFFFFF] shadow-[0px_ 0px_30px_10px] shadow-2xl shadow-[gray] rounded-[25px] ">
+
+                <div class="pt-[24px]">
+                    <img class="lg:w-[102px] lg:h-[102px] lg:ml-10 md:w-[81px] md:h-[81px] w-[57px] h-[57px] ml-5 " src="./online-store 1.png" alt="">
+                </div>
+
+                <div  class="lg:w-[302px] lg:h-[276px] md:pl-5">
+                    <h3 class="lg:text-[36px] lg:mb-5 md:text-[24px] text-[21px] font-bold ml-5">Работает онлайн</h3>
+
+                    <p class="lg:text-[20px] md:text-[16px] text-[14px] font-[400] text-[#575757] px-5">
+                        Веб-сервис работает везде, где есть интернет. Обновляется бесплатно, автоматически
+
+                    </p>
+                </div>
+            </div>
+
+            <div
+                class="lg:w-[410px] lg:h-[470px] lg:flex-col lg:items-start lg:justify-center lg:gap-[30px]   md:w-[690px] md:h-[149px] w-[346px] h-[187px] md:flex md:items-center md:justify-center bg-[#FFFFFF] shadow-[0px_ 0px_30px_10px] shadow-2xl shadow-[gray] rounded-[25px] ">
+
+                <div class="pt-[24px]">
+                    <img class="lg:w-[102px] lg:h-[102px] lg:ml-10 md:w-[81px] md:h-[81px] w-[57px] h-[57px] ml-5 " src="./fast-time 1.png" alt="">
+                </div>
+
+                <div  class="lg:w-[302px] lg:h-[276px] md:pl-5">
+                    <h3 class="lg:text-[36px] lg:mb-5 md:text-[24px] text-[21px] font-bold ml-5">Работает онлайн</h3>
+
+                    <p class="lg:text-[20px] md:text-[16px] text-[14px] font-[400] text-[#575757] px-5">
+                        Веб-сервис работает везде, где есть интернет. Обновляется бесплатно, автоматически
+
+                    </p>
+                </div>
+            </div>
+
+
+        </div>
+
+        <img class="lg:w-[1112px] lg:h-[702px] md:w-[920px] md:h-[463px] w-[360px] h-[240px] m-auto" src="./Операции 1.png" alt="">
+
+        
 
     </div>
 </body>
