--- a/index.html
+++ b/index.html
@@ -93,14 +93,17 @@
 
     <div class="div4 lg:w-[1290px] lg:h-[1290px] md:w-[690px] md:h-[1070px] m-auto w-[375px] h-[1000px] ">
 
-        <h2 class="md:text-[40px] font-bold text-[26px] font-bold text-center px-[30px] pt-5 pb-[30px]">Простой дружелюбный сервис</h2>
+        <h2 class="md:text-[40px] font-bold text-[26px] font-bold text-center px-[30px] pt-5 pb-[30px]">Простой
+            дружелюбный сервис</h2>
 
-        <div class=" lg:w-[1290px] lg:h-[470px] lg:flex lg:justify-between md:w-[690px] md:h-[490px] md:flex-wrap m-auto  w-[346px] h-[640px] ">
+        <div
+            class=" lg:w-[1290px] lg:h-[470px] lg:flex lg:justify-between md:w-[690px] md:h-[490px] md:flex-wrap m-auto  w-[346px] h-[640px] ">
             <div
                 class=" lg:w-[410px] lg:h-[470px] lg:flex-col lg:items-start lg:justify-center lg:gap-[30px]  md:w-[690px] md:h-[149px] md:flex md:items-center md:justify-center w-[346px] h-[187px] bg-[#FFFFFF] shadow-[0px_ 0px_30px_10px] shadow-2xl shadow-[gray] rounded-[25px] ">
 
                 <div class="pt-[24px]">
-                    <img class="lg:w-[102px] lg:h-[102px] lg:ml-10 md:w-[81px] md:h-[81px] w-[57px] h-[57px] ml-5 " src="./online-test 1.png" alt="">
+                    <img class="lg:w-[102px] lg:h-[102px] lg:ml-10 md:w-[81px] md:h-[81px] w-[57px] h-[57px] ml-5 "
+                        src="./online-test 1.png" alt="">
                 </div>
 
                 <div class=" lg:w-[302px] lg:h-[276px] md:pl-5">
@@ -117,10 +120,11 @@
                 class=" lg:w-[410px] lg:h-[470px] lg:flex-col lg:items-start lg:justify-center lg:gap-[30px] lg:m-[0px]  md:w-[690px] md:h-[149px] w-[346px] h-[187px] md:flex md:items-center md:justify-center my-5 bg-[#FFFFFF] shadow-[0px_ 0px_30px_10px] shadow-2xl shadow-[gray] rounded-[25px] ">
 
                 <div class="pt-[24px]">
-                    <img class="lg:w-[102px] lg:h-[102px] lg:ml-10 md:w-[81px] md:h-[81px] w-[57px] h-[57px] ml-5 " src="./online-store 1.png" alt="">
+                    <img class="lg:w-[102px] lg:h-[102px] lg:ml-10 md:w-[81px] md:h-[81px] w-[57px] h-[57px] ml-5 "
+                        src="./online-store 1.png" alt="">
                 </div>
 
-                <div  class="lg:w-[302px] lg:h-[276px] md:pl-5">
+                <div class="lg:w-[302px] lg:h-[276px] md:pl-5">
                     <h3 class="lg:text-[36px] lg:mb-5 md:text-[24px] text-[21px] font-bold ml-5">Работает онлайн</h3>
 
                     <p class="lg:text-[20px] md:text-[16px] text-[14px] font-[400] text-[#575757] px-5">
@@ -134,10 +138,11 @@
                 class="lg:w-[410px] lg:h-[470px] lg:flex-col lg:items-start lg:justify-center lg:gap-[30px]   md:w-[690px] md:h-[149px] w-[346px] h-[187px] md:flex md:items-center md:justify-center bg-[#FFFFFF] shadow-[0px_ 0px_30px_10px] shadow-2xl shadow-[gray] rounded-[25px] ">
 
                 <div class="pt-[24px]">
-                    <img class="lg:w-[102px] lg:h-[102px] lg:ml-10 md:w-[81px] md:h-[81px] w-[57px] h-[57px] ml-5 " src="./fast-time 1.png" alt="">
+                    <img class="lg:w-[102px] lg:h-[102px] lg:ml-10 md:w-[81px] md:h-[81px] w-[57px] h-[57px] ml-5 "
+                        src="./fast-time 1.png" alt="">
                 </div>
 
-                <div  class="lg:w-[302px] lg:h-[276px] md:pl-5">
+                <div class="lg:w-[302px] lg:h-[276px] md:pl-5">
                     <h3 class="lg:text-[36px] lg:mb-5 md:text-[24px] text-[21px] font-bold ml-5">Работает онлайн</h3>
 
                     <p class="lg:text-[20px] md:text-[16px] text-[14px] font-[400] text-[#575757] px-5">
@@ -150,11 +155,73 @@
 
         </div>
 
-        <img class="lg:w-[1112px] lg:h-[702px] md:w-[920px] md:h-[463px] w-[360px] h-[240px] m-auto" src="./Операции 1.png" alt="">
+        <img class="lg:w-[1112px] lg:h-[702px] md:w-[920px] md:h-[463px] w-[360px] h-[240px] m-auto"
+            src="./Операции 1.png" alt="">
 
-        
+
 
     </div>
+
+    <div class="div5 lg:w-[1520px] lg:h-[1233px] md:w-[690px] md:h-[1350px]  w-[375px] h-[1460px] m-auto mt-[30px] bg-[#F2F2F2]">
+        <div class="div5bolo ">
+            <div class="md:w-[690px] md:h-[232px] w-[346px] h-[260px] mb-[20px]  m-auto">
+                <h2 class="md:text-[35px] text-[25px] font-bold mb-5">Управление оборудованием и документооборот</h2>
+
+                <p class="md:text-[18px]  text-[14px] font-[400] text-[#575757]">
+                    Оформляйте первичную документацию, работайте с входящими и исходящими платёжными поручениями,
+                    банковскими ордерами, выпиской. Бухгалтерские проводки автоматически создаются на основе первичных
+                    документов. Формы, документы и данные обновляются сами.
+                </p>
+            </div>
+
+            <img class=" md:w-[1000px] md:h-[541px] w-[350px] h-[270px] m-auto" src="./Frame 955.png" alt="">
+        </div>
+
+        <div class="div5tah  lg:w-[1414px] lg:h-[376px] lg:flex lg:flex-wrap lg:justify-around lg:items-center lg:gap-5 m-auto">
+
+            <div class=" lg:flex lg:justify-center lg:gap-5 mb-[48px] md:flex md:justify-around">
+                <img class="lg:w-[86px] lg:h-[86px]  md:w-[70px] md:h-[70px] w-[70px] h-[70px] mb-[17px]" src="./approve (1) 1.png" alt="">
+
+                <div>
+                    <h2 class=" lg:text-[40px] md:text-[24px] md:font-bold text-[24px] font-bold mb-[10px]">Учет оборудования</h2>
+
+                    <p class=" lg::text-[24px] md:text-[16px] md:text-[#575757] md:font-[400] text-[16px] text-[#575757] font-[400]">Просто загрузите скан в сервис, данные заполнятся в форму автоматически</p>
+                </div>
+            </div>
+
+            <div class=" lg:flex lg:justify-center  lg:gap-5 mb-[48px] md:flex md:justify-around">
+                <img class="lg:w-[86px] lg:h-[86px]  md:w-[70px] md:h-[70px] w-[70px] h-[70px] mb-[17px]" src="./user (10) 1.png" alt="">
+
+                <div>
+                    <h2 class=" lg:text-[40px] md:text-[24px] md:font-bold text-[24px] font-bold mb-[10px]">Учет оборудования</h2>
+
+                    <p class=" lg::text-[24px] md:text-[16px] md:text-[#575757] md:font-[400] text-[16px] text-[#575757] font-[400]">Просто загрузите скан в сервис, данные заполнятся в форму автоматически</p>
+                </div>
+            </div>
+
+            <div class=" lg:flex lg:justify-center  lg:gap-5 mb-[48px] md:flex md:justify-around">
+                <img class="lg:w-[86px] lg:h-[86px]  md:w-[70px] md:h-[70px] w-[70px] h-[70px] mb-[17px]" src="./file (11) 2.png" alt="">
+
+                <div>
+                    <h2 class=" lg:text-[40px] md:text-[24px] md:font-bold text-[24px] font-bold mb-[10px]">Учет оборудования</h2>
+
+                    <p class=" lg::text-[24px] md:text-[16px] md:text-[#575757] md:font-[400] text-[16px] text-[#575757] font-[400]">Просто загрузите скан в сервис, данные заполнятся в форму автоматически</p>
+                </div>
+            </div>
+
+            <div class=" lg:flex lg:justify-center lg:gap-5 mb-[48px] md:flex md:justify-around">
+                <img class="lg:w-[86px] lg:h-[86px]  md:w-[70px] md:h-[70px] w-[70px] h-[70px] mb-[17px]" src="./Group (3).png" alt="">
+
+                <div>
+                    <h2 class=" lg:text-[40px] md:text-[24px] md:font-bold text-[24px] font-bold mb-[10px]">Учет оборудования</h2>
+
+                    <p class=" lg::text-[24px] md:text-[16px]  md:text-[#575757] md:font-[400] text-[16px] text-[#575757] font-[400]">Просто загрузите скан в сервис, данные заполнятся в форму автоматически</p>
+                </div>
+            </div>
+
+        </div>
+    </div>
+    
 </body>
 
 </html>
