--- a/index.html
+++ b/index.html
@@ -162,7 +162,8 @@
 
     </div>
 
-    <div class="div5 lg:w-[1520px] lg:h-[1233px] md:w-[690px] md:h-[1350px]  w-[375px] h-[1460px] m-auto mt-[30px] bg-[#F2F2F2]">
+    <div
+        class="div5 lg:w-[1520px] lg:h-[1233px] md:w-[690px] md:h-[1350px]  w-[375px] h-[1460px] m-auto mt-[30px] bg-[#F2F2F2]">
         <div class="div5bolo ">
             <div class="md:w-[690px] md:h-[232px] w-[346px] h-[260px] mb-[20px]  m-auto">
                 <h2 class="md:text-[35px] text-[25px] font-bold mb-5">Управление оборудованием и документооборот</h2>
@@ -177,50 +178,120 @@
             <img class=" md:w-[1000px] md:h-[541px] w-[350px] h-[270px] m-auto" src="./Frame 955.png" alt="">
         </div>
 
-        <div class="div5tah  lg:w-[1414px] lg:h-[376px] lg:flex lg:flex-wrap lg:justify-around lg:items-center lg:gap-5 m-auto">
+        <div
+            class="div5tah  lg:w-[1414px] lg:h-[376px] lg:flex lg:flex-wrap lg:justify-around lg:items-center lg:gap-5 m-auto">
 
             <div class=" lg:flex lg:justify-center lg:gap-5 mb-[48px] md:flex md:justify-around">
-                <img class="lg:w-[86px] lg:h-[86px]  md:w-[70px] md:h-[70px] w-[70px] h-[70px] mb-[17px]" src="./approve (1) 1.png" alt="">
+                <img class="lg:w-[86px] lg:h-[86px]  md:w-[70px] md:h-[70px] w-[70px] h-[70px] mb-[17px]"
+                    src="./approve (1) 1.png" alt="">
 
                 <div>
-                    <h2 class=" lg:text-[40px] md:text-[24px] md:font-bold text-[24px] font-bold mb-[10px]">Учет оборудования</h2>
+                    <h2 class=" lg:text-[40px] md:text-[24px] md:font-bold text-[24px] font-bold mb-[10px]">Учет
+                        оборудования</h2>
 
-                    <p class=" lg::text-[24px] md:text-[16px] md:text-[#575757] md:font-[400] text-[16px] text-[#575757] font-[400]">Просто загрузите скан в сервис, данные заполнятся в форму автоматически</p>
+                    <p
+                        class=" lg::text-[24px] md:text-[16px] md:text-[#575757] md:font-[400] text-[16px] text-[#575757] font-[400]">
+                        Просто загрузите скан в сервис, данные заполнятся в форму автоматически</p>
                 </div>
             </div>
 
             <div class=" lg:flex lg:justify-center  lg:gap-5 mb-[48px] md:flex md:justify-around">
-                <img class="lg:w-[86px] lg:h-[86px]  md:w-[70px] md:h-[70px] w-[70px] h-[70px] mb-[17px]" src="./user (10) 1.png" alt="">
+                <img class="lg:w-[86px] lg:h-[86px]  md:w-[70px] md:h-[70px] w-[70px] h-[70px] mb-[17px]"
+                    src="./user (10) 1.png" alt="">
 
                 <div>
-                    <h2 class=" lg:text-[40px] md:text-[24px] md:font-bold text-[24px] font-bold mb-[10px]">Учет оборудования</h2>
+                    <h2 class=" lg:text-[40px] md:text-[24px] md:font-bold text-[24px] font-bold mb-[10px]">Учет
+                        оборудования</h2>
 
-                    <p class=" lg::text-[24px] md:text-[16px] md:text-[#575757] md:font-[400] text-[16px] text-[#575757] font-[400]">Просто загрузите скан в сервис, данные заполнятся в форму автоматически</p>
+                    <p
+                        class=" lg::text-[24px] md:text-[16px] md:text-[#575757] md:font-[400] text-[16px] text-[#575757] font-[400]">
+                        Просто загрузите скан в сервис, данные заполнятся в форму автоматически</p>
                 </div>
             </div>
 
             <div class=" lg:flex lg:justify-center  lg:gap-5 mb-[48px] md:flex md:justify-around">
-                <img class="lg:w-[86px] lg:h-[86px]  md:w-[70px] md:h-[70px] w-[70px] h-[70px] mb-[17px]" src="./file (11) 2.png" alt="">
+                <img class="lg:w-[86px] lg:h-[86px]  md:w-[70px] md:h-[70px] w-[70px] h-[70px] mb-[17px]"
+                    src="./file (11) 2.png" alt="">
 
                 <div>
-                    <h2 class=" lg:text-[40px] md:text-[24px] md:font-bold text-[24px] font-bold mb-[10px]">Учет оборудования</h2>
+                    <h2 class=" lg:text-[40px] md:text-[24px] md:font-bold text-[24px] font-bold mb-[10px]">Учет
+                        оборудования</h2>
 
-                    <p class=" lg::text-[24px] md:text-[16px] md:text-[#575757] md:font-[400] text-[16px] text-[#575757] font-[400]">Просто загрузите скан в сервис, данные заполнятся в форму автоматически</p>
+                    <p
+                        class=" lg::text-[24px] md:text-[16px] md:text-[#575757] md:font-[400] text-[16px] text-[#575757] font-[400]">
+                        Просто загрузите скан в сервис, данные заполнятся в форму автоматически</p>
                 </div>
             </div>
 
             <div class=" lg:flex lg:justify-center lg:gap-5 mb-[48px] md:flex md:justify-around">
-                <img class="lg:w-[86px] lg:h-[86px]  md:w-[70px] md:h-[70px] w-[70px] h-[70px] mb-[17px]" src="./Group (3).png" alt="">
+                <img class="lg:w-[86px] lg:h-[86px]  md:w-[70px] md:h-[70px] w-[70px] h-[70px] mb-[17px]"
+                    src="./Group (3).png" alt="">
 
                 <div>
-                    <h2 class=" lg:text-[40px] md:text-[24px] md:font-bold text-[24px] font-bold mb-[10px]">Учет оборудования</h2>
+                    <h2 class=" lg:text-[40px] md:text-[24px] md:font-bold text-[24px] font-bold mb-[10px]">Учет
+                        оборудования</h2>
 
-                    <p class=" lg::text-[24px] md:text-[16px]  md:text-[#575757] md:font-[400] text-[16px] text-[#575757] font-[400]">Просто загрузите скан в сервис, данные заполнятся в форму автоматически</p>
+                    <p
+                        class=" lg::text-[24px] md:text-[16px]  md:text-[#575757] md:font-[400] text-[16px] text-[#575757] font-[400]">
+                        Просто загрузите скан в сервис, данные заполнятся в форму автоматически</p>
                 </div>
             </div>
 
         </div>
     </div>
+
+    <div class="div6 lg:w-[1520px] lg:h-[1770px] md:w-[768px] md:h-[2000px] w-[350px] h-[1260px] m-auto">
+        <div
+            class="div6bolo lg:flex lg:flex-row-reverse lg:justify-around md:flex md:flex-col md:justify-center md:items-center md:gap-10 mb-13">
+            <div
+                class="lg:w-[697px] lg:h-[379px] lg:m-[0px]  md:w-[697px] md:h-[232px] md:m-auto w-[342px] h-[200px] m-auto ">
+                <h2 class=" lg:text-[60px] md:text-[40px] text-[26px] font-bold mb-5">
+                    Контролируйте сроки регламентных работ
+                </h2>
+
+                <p class="lg:text-[24px] md:text-[18px] text-[14px] text-[#575757] font-[400]">
+                    Сервис автоматически рассчитывает зарплату, больничные, отпускные, декретные, алименты и прочее.
+                    Также есть расчёты с налоговой, учёт дивидендов, доходов от аренды, выплат по договорам подряда,
+                    подарков и призов.
+                </p>
+
+            </div>
+
+            <img class="lg:w-[594px] lg:h-[557px] md:w-[594px] md:h-[557px] w-[324px] h-[303px]" src="./Frame (10).png"
+                alt="">
+        </div>
+
+        <h2 class="lg:text-[60px] md:text-[40px] text-[23px] font-bold px-[26px] text-center">
+            Синхронизация данных с ФГИС «Аршин»
+        </h2>
+
+        <div
+            class="lg:w-[841px] lg:h-[234px] md:w-[690px] md:h-[400px] md:mt-5 w-[350px] h-[380px] flex justify-around items-center flex-wrap m-auto  gap-[15px]">
+
+            <div
+                class="lg:w-[267px] lg:h-[234px] md:w-[210px] md:h-[192px] w-[158px] h-[144px] bg-[white] flex flex-col items-center gap-5 justify-center shadow-[0px_ 0px_30px_10px] shadow-2xl shadow-[gray] rounded-[25px] ">
+                <img class="lg:w-[] lg:h-[] md:w-[77px] md:h-[77px] w-[58px] h-[58px]" src="./exam (2) 1.png" alt="">
+                <p class="lg:text-[30px]  md:text-[21px] text-[14px] px-5 text-center font-bold">Результаты поверки</p>
+            </div>
+
+            <div
+                class="lg:w-[267px] lg:h-[234px] md:w-[210px] md:h-[192px] w-[158px] h-[144px] bg-[white] flex flex-col items-center gap-5 justify-center shadow-[0px_ 0px_30px_10px] shadow-2xl shadow-[gray] rounded-[25px] ">
+                <img class="lg:w-[] lg:h-[] md:w-[77px] md:h-[77px] w-[58px] h-[58px]" src="./Group 924.png" alt="">
+                <p class="lg:text-[30px]  md:text-[21px] text-[14px] px-5 text-center font-bold">ГЭТ</p>
+            </div>
+
+            <div
+                class="lg:w-[267px] lg:h-[234px] md:w-[210px] md:h-[192px] w-[158px] h-[144px] bg-[white] flex flex-col items-center gap-5 justify-center shadow-[0px_ 0px_30px_10px] shadow-2xl shadow-[gray] rounded-[25px] ">
+                <img class="lg:w-[] lg:h-[] md:w-[77px] md:h-[77px] w-[58px] h-[58px]" src="./medal (3) 1.png" alt="">
+                <p class="lg:text-[30px]  md:text-[21px] text-[14px] px-5 text-center font-bold">Результаты поверки</p>
+            </div>
+
+
+        </div>
+
+        <img class="m-auto" src="./Frame 964.png" alt="">
+    </div>
+
     
 </body>
 
