--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
         </div>
     </div>
 
-    <div class="div6 lg:w-[1520px] lg:h-[1770px] md:w-[768px] md:h-[2000px] w-[350px] h-[1260px] m-auto">
+    <div class="div6 lg:w-[1520px] lg:h-[1770px] md:w-[768px] md:h-[2000px] w-[350px] h-[1260px] m-auto ">
         <div
             class="div6bolo lg:flex lg:flex-row-reverse lg:justify-around md:flex md:flex-col md:justify-center md:items-center md:gap-10 mb-13">
             <div
@@ -292,6 +292,41 @@
         <img class="m-auto" src="./Frame 964.png" alt="">
     </div>
 
+    <div class="div7 lg:w-[1520px] lg:h-[760px] lg:mt-[100px] md:w-[768px] md:h-[1000px] w-[350px] h-[760px] m-auto ">
+        <div
+            class=" lg:flex lg:flex-row-reverse lg:justify-around lg:items-center md:flex md:flex-col md:justify-center md:items-center md:gap-10 mb-13">
+            <div
+                class="lg:w-[697px] lg:h-[379px] lg:m-[0px]  md:w-[697px] md:h-[232px] md:m-auto w-[342px] h-[200px] m-auto ">
+                <h2 class=" lg:text-[60px] lg:pt-5 md:text-[40px] text-[26px] font-bold mb-5">
+                    Контролируйте сроки регламентных работ
+                </h2>
+
+                <p class="lg:text-[24px] md:text-[18px] text-[14px] text-[#575757] font-[400]">
+                    Сервис автоматически рассчитывает зарплату, больничные, отпускные, декретные, алименты и прочее.
+                    Также есть расчёты с налоговой, учёт дивидендов, доходов от аренды, выплат по договорам подряда,
+                    подарков и призов.
+                </p>
+
+                <div
+                    class="lg:w-[697px] lg:h-[244px] lg:m-[0px]  md:w-[697px] md:h-[232px] md:m-auto w-[342px] h-[200px] m-auto ">
+                    <h2 class=" lg:text-[60px] md:text-[40px] text-[26px] font-bold mb-5">
+                        Подключите открытый API
+                    </h2>
+
+                    <p class="lg:text-[24px] md:text-[18px] text-[14px] text-[#575757] font-[400]">
+                        Настройте обмен данными между Бухгалтерией и другими сервисами, в которых работают сотрудники
+                        вашей
+                        компании.
+                    </p>
+
+                </div>
+
+            </div>
+
+            <img class="lg:w-[587px] lg:h-[521px] lg:mb-[-230px] lg:mr-[-160px] lg:mt-[140px] md:w-[587px] md:h-[521px] md:mt-[120px] w-[335px] h-[297px] mt-[180px] "
+                src="./Frame (11).png" alt="">
+        </div>
+    </div>
     
 </body>
 
