--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                     Контролируйте сроки регламентных работ
                 </h2>
 
-                <p class="lg:text-[24px] md:text-[18px] text-[14px] text-[#575757] font-[400]">
+                <p class="lg:text-[24px] md:text-[18px] text-[14px] text-[#575757]  font-[400]">
                     Сервис автоматически рассчитывает зарплату, больничные, отпускные, декретные, алименты и прочее.
                     Также есть расчёты с налоговой, учёт дивидендов, доходов от аренды, выплат по договорам подряда,
                     подарков и призов.
@@ -257,8 +257,8 @@
 
             </div>
 
-            <img class="lg:w-[594px] lg:h-[557px] md:w-[594px] md:h-[557px] w-[324px] h-[303px]" src="./Frame (10).png"
-                alt="">
+            <img class="lg:w-[594px] lg:h-[557px] md:w-[594px] md:h-[557px] w-[324px] h-[303px] mt-[30px]"
+                src="./Frame (10).png" alt="">
         </div>
 
         <h2 class="lg:text-[60px] md:text-[40px] text-[23px] font-bold px-[26px] text-center">
@@ -327,7 +327,129 @@
                 src="./Frame (11).png" alt="">
         </div>
     </div>
+
+    <div
+        class="div8 lg:w-[1520px] lg:h-[750px] md:w-[690px] md:h-[1020px]  w-[375px] h-[960px] m-auto mt-[30px] bg-[#F2F2F2]">
+        <div class="div8bolo lg:flex ">
+            <div class="lg:w-[769px] lg:h-[280px] md:w-[690px] md:h-[256px] w-[342px] h-[176px] mb-[20px] pl-[-40px]  m-auto">
+                <h2 class="md:text-[35px] text-[25px] font-bold mb-5 ml-[15px]">Автоматизируйте ведение организаций</h2>
+
+                <p class="md:text-[18px]  text-[14px] font-[400] text-[#575757] ">
+                    Ведите неограниченное количество организаций в одном аккаунте, отслеживайте уведомления по ним.
+                    Когда придёт время продлить оплату тарифа — сервис сам напомнит клиенту.
+                </p>
+            </div>
+
+            <img class=" lg:w-[580px] lg:h-[441px] md:w-[580px] md:h-[441px] w-[346px] h-[264px] md:mb-10 m-auto mb-10"
+                src="./Информация о тарифе.png" alt="">
+        </div>
+
+        <div
+            class="div8tah  lg:w-[1414px] lg:h-[376px] lg:flex lg:flex-wrap lg:justify-around lg:items-center lg:gap-5 m-auto">
+
+            <div class=" lg:flex lg:justify-center lg:items-center lg:g      ap-5 mb-[48px] md:flex md:justify-around">
+                <img class="lg:w-[86px] lg:h-[86px] lg:mt-5  md:w-[70px] md:h-[70px] w-[70px] h-[70px] mb-[17px]"
+                    src="./chart (2) 1.png" alt="">
+
+                <div>
+                    <h2 class=" lg:text-[40px] md:text-[24px] md:font-bold text-[24px] font-bold mb-[10px]">Учет
+                        Графики работ</h2>
+
+                    <p
+                        class=" lg::text-[24px]  md:text-[16px] md:text-[#575757] md:font-[400] text-[16px] text-[#575757] font-[400]">
+                        Просто загрузите скан в сервис, данные заполнятся в форму автоматически</p>
+                </div>
+            </div>
+
+            <div class=" lg:flex lg:justify-center lg:items-center  lg:gap-5 mb-[48px] md:flex md:justify-around">
+                <img class="lg:w-[86px] lg:h-[86px] lg:mt-6 md:w-[70px] md:h-[70px] w-[70px] h-[70px] mb-[17px]"
+                    src="./cells 1.png" alt="">
+
+                <div>
+                    <h2 class=" lg:text-[40px] md:text-[24px] md:font-bold text-[24px] font-bold mb-[10px]">Учет
+                        Таблицы отчетности</h2>
+
+                    <p
+                        class=" lg::text-[24px] md:text-[16px] md:text-[#575757] md:font-[400] text-[16px] text-[#575757] font-[400]">
+                        Просто загрузите скан в сервис, данные заполнятся в форму автоматически</p>
+                </div>
+            </div>
+
+
+
+        </div>
+    </div>
+
     
+    <div class="div9 lg:w-[1290px] lg:h-[640px] md:w-[690px] md:h-[650px] lg:mt-15   md:mt-10 m-auto w-[375px] h-[740px] ">
+
+        <h2 class="md:text-[40px] font-bold text-[26px] font-bold text-center px-[30px] pt-5 pb-[30px]">Поможем, подскажем</h2>
+
+        <div
+            class=" lg:w-[1290px] lg:h-[470px] lg:flex lg:justify-between md:w-[690px] md:h-[490px] md:flex-wrap m-auto  w-[346px] h-[640px] ">
+            <div
+                class=" lg:w-[410px] lg:h-[470px] lg:flex-col lg:items-start lg:justify-center lg:gap-[30px]  md:w-[690px] md:h-[149px] md:flex md:items-center md:justify-center w-[346px] h-[187px] bg-[#FFFFFF] shadow-[0px_ 0px_30px_10px] shadow-2xl shadow-[gray] rounded-[25px] ">
+
+                <div class="pt-[24px]">
+                    <img class="lg:w-[102px] lg:h-[102px] lg:ml-10 md:w-[81px] md:h-[81px] w-[57px] h-[57px] ml-5 "
+                        src="./file-and-folder 1.png" alt="">
+                </div>
+
+                <div class=" lg:w-[302px] lg:h-[276px] md:pl-5">
+                    <h3 class="lg:text-[36px] lg:mb-5 md:text-[24px] text-[21px] font-bold ml-5">Шаблоны документов</h3>
+
+                    <p class="lg:text-[20px] md:text-[16px] text-[14px] font-[400] text-[#575757] px-5">
+                       Веб-сервис работает везде, где есть интернет. Обновляется бесплатно, автоматически
+
+                    </p>
+                </div>
+            </div>
+
+            <div
+                class=" lg:w-[410px] lg:h-[470px] lg:flex-col lg:items-start lg:justify-center lg:gap-[30px] lg:m-[0px]  md:w-[690px] md:h-[149px] w-[346px] h-[187px] md:flex md:items-center md:justify-center my-5 bg-[#FFFFFF] shadow-[0px_ 0px_30px_10px] shadow-2xl shadow-[gray] rounded-[25px] ">
+
+                <div class="pt-[24px]">
+                    <img class="lg:w-[102px] lg:h-[102px] lg:ml-10 md:w-[81px] md:h-[81px] w-[57px] h-[57px] ml-5 "
+                        src="./documents (3) 1.png" alt="">
+                </div>
+
+                <div class="lg:w-[302px] lg:h-[276px] md:pl-5">
+                    <h3 class="lg:text-[36px] lg:mb-5 md:text-[24px] text-[21px] font-bold ml-5">Нормативная база</h3>
+
+                    <p class="lg:text-[20px] md:text-[16px] text-[14px] font-[400] text-[#575757] px-5">
+                       Сервис можно освоить за 2 дня, он простой и понятный. Есть подсказки, напоминания
+
+                    </p>
+                </div>
+            </div>
+
+            <div
+                class="lg:w-[410px] lg:h-[470px] lg:flex-col lg:items-start lg:justify-center lg:gap-[30px]   md:w-[690px] md:h-[149px] w-[346px] h-[187px] md:flex md:items-center md:justify-center bg-[#FFFFFF] shadow-[0px_ 0px_30px_10px] shadow-2xl shadow-[gray] rounded-[25px] ">
+
+                <div class="pt-[24px]">
+                    <img class="lg:w-[102px] lg:h-[102px] lg:ml-10 md:w-[81px] md:h-[81px] w-[57px] h-[57px] ml-5 "
+                        src="./support (4) 1.png" alt="">
+                </div>
+
+                <div class="lg:w-[302px] lg:h-[276px] md:pl-5">
+                    <h3 class="lg:text-[36px] lg:mb-5 md:text-[24px] text-[21px] font-bold ml-5">Техподдержка</h3>
+
+                    <p class="lg:text-[20px] md:text-[16px] text-[14px] font-[400] text-[#575757] px-5">
+                       Автозаполнение по ИНН, распознавание накладных, загрузка данных из 1С
+
+                    </p>
+                </div>
+            </div>
+
+
+        </div>
+
+
+
+
+    </div>
+
+
 </body>
 
 </html>
