--- a/index.html
+++ b/index.html
@@ -331,7 +331,8 @@
     <div
         class="div8 lg:w-[1520px] lg:h-[750px] md:w-[690px] md:h-[1020px]  w-[375px] h-[960px] m-auto mt-[30px] bg-[#F2F2F2]">
         <div class="div8bolo lg:flex ">
-            <div class="lg:w-[769px] lg:h-[280px] md:w-[690px] md:h-[256px] w-[342px] h-[176px] mb-[20px] pl-[-40px]  m-auto">
+            <div
+                class="lg:w-[769px] lg:h-[280px] md:w-[690px] md:h-[256px] w-[342px] h-[176px] mb-[20px] pl-[-40px]  m-auto">
                 <h2 class="md:text-[35px] text-[25px] font-bold mb-5 ml-[15px]">Автоматизируйте ведение организаций</h2>
 
                 <p class="md:text-[18px]  text-[14px] font-[400] text-[#575757] ">
@@ -380,10 +381,12 @@
         </div>
     </div>
 
-    
-    <div class="div9 lg:w-[1290px] lg:h-[640px] md:w-[690px] md:h-[650px] lg:mt-15   md:mt-10 m-auto w-[375px] h-[740px] ">
 
-        <h2 class="md:text-[40px] font-bold text-[26px] font-bold text-center px-[30px] pt-5 pb-[30px]">Поможем, подскажем</h2>
+    <div
+        class="div9 lg:w-[1290px] lg:h-[640px] md:w-[690px] md:h-[650px] lg:mt-15   md:mt-10 m-auto w-[375px] h-[740px] ">
+
+        <h2 class="md:text-[40px] font-bold text-[26px] font-bold text-center px-[30px] pt-5 pb-[30px]">Поможем,
+            подскажем</h2>
 
         <div
             class=" lg:w-[1290px] lg:h-[470px] lg:flex lg:justify-between md:w-[690px] md:h-[490px] md:flex-wrap m-auto  w-[346px] h-[640px] ">
@@ -399,7 +402,7 @@
                     <h3 class="lg:text-[36px] lg:mb-5 md:text-[24px] text-[21px] font-bold ml-5">Шаблоны документов</h3>
 
                     <p class="lg:text-[20px] md:text-[16px] text-[14px] font-[400] text-[#575757] px-5">
-                       Веб-сервис работает везде, где есть интернет. Обновляется бесплатно, автоматически
+                        Веб-сервис работает везде, где есть интернет. Обновляется бесплатно, автоматически
 
                     </p>
                 </div>
@@ -417,7 +420,7 @@
                     <h3 class="lg:text-[36px] lg:mb-5 md:text-[24px] text-[21px] font-bold ml-5">Нормативная база</h3>
 
                     <p class="lg:text-[20px] md:text-[16px] text-[14px] font-[400] text-[#575757] px-5">
-                       Сервис можно освоить за 2 дня, он простой и понятный. Есть подсказки, напоминания
+                        Сервис можно освоить за 2 дня, он простой и понятный. Есть подсказки, напоминания
 
                     </p>
                 </div>
@@ -435,7 +438,7 @@
                     <h3 class="lg:text-[36px] lg:mb-5 md:text-[24px] text-[21px] font-bold ml-5">Техподдержка</h3>
 
                     <p class="lg:text-[20px] md:text-[16px] text-[14px] font-[400] text-[#575757] px-5">
-                       Автозаполнение по ИНН, распознавание накладных, загрузка данных из 1С
+                        Автозаполнение по ИНН, распознавание накладных, загрузка данных из 1С
 
                     </p>
                 </div>
@@ -447,6 +450,24 @@
 
 
 
+    </div>
+
+    <div
+        class="div10 lg:w-[1520px] lg:h-[775px] lg:flex lg:flex-row lg:justify-around  md:w-[768px] md:h-[738px]  md:gap-[25px]
+        flex flex-col items-center w-[375px] h-[591px] gap-[25px] m-auto bg-[red]">
+
+        <div class="div10bolo lg:w-[769px] lg:h-[316px] md:w-[690px] md:h-[210] w-[345px] h-[200px] bg-blue-500 ">
+            <h2 class="lg:text-[58px] md:text-[40px] text-[26px] font-bold">Резервное копирование данных</h2>
+
+            <p class="lg:text-[24px] md:text-[24px] text-[14px] font-[400]">
+                Сервер хранения данных наших клиентов надёжно защищён, а персональные данные зашифрованы. Если прервётся
+                оплата, перестанет работать интернет или случится сбой в сервисе — данные не пропадут.
+            </p>
+        </div>
+
+
+        <img class="lg:w-[586px] lg:h-[500px] md:w-[568px] md:h-[475px] w-[344px] h-[287px]" src="./Frame (12).png"
+            alt="">
     </div>
 
 
