--- a/index.html
+++ b/index.html
@@ -452,11 +452,10 @@
 
     </div>
 
-    <div
-        class="div10 lg:w-[1520px] lg:h-[775px] lg:flex lg:flex-row lg:justify-around  md:w-[768px] md:h-[738px]  md:gap-[25px]
-        flex flex-col items-center w-[375px] h-[591px] gap-[25px] m-auto bg-[red]">
+    <div class="div10 lg:w-[1520px] lg:h-[775px] lg:flex lg:flex-row lg:justify-around mb-5  md:w-[768px] md:h-[738px]  md:gap-[25px]
+        flex flex-col items-center w-[375px] h-[591px] gap-[25px] m-auto bg-[#F2F2F2]">
 
-        <div class="div10bolo lg:w-[769px] lg:h-[316px] md:w-[690px] md:h-[210] w-[345px] h-[200px] bg-blue-500 ">
+        <div class="div10bolo lg:w-[769px] lg:h-[316px] md:w-[690px] md:h-[210] w-[345px] h-[200px]  ">
             <h2 class="lg:text-[58px] md:text-[40px] text-[26px] font-bold">Резервное копирование данных</h2>
 
             <p class="lg:text-[24px] md:text-[24px] text-[14px] font-[400]">
@@ -467,6 +466,48 @@
 
 
         <img class="lg:w-[586px] lg:h-[500px] md:w-[568px] md:h-[475px] w-[344px] h-[287px]" src="./Frame (12).png"
+            alt="">
+    </div>
+
+    <div class="div11 lg:w-[1520px] lg:h-[775px] lg:flex lg:flex-row-reverse lg:justify-around  md:w-[768px] md:h-[900px]  md:gap-[25px]
+        flex flex-col items-center w-[375px] h-[680px] gap-[25px] m-auto ">
+
+        <div class="div10bolo lg:w-[697px] lg:h-[430px] md:w-[694px] md:h-[219] w-[348px] h-[327px]  ">
+            <h2 class="lg:text-[58px] md:text-[40px] text-[26px] font-bold">Кому подходит</h2>
+
+            <div class="flex flex-col justify-between lg:w-[769px] lg:h-[316px] md:w-[690px] md:h-[210] w-[345px] h-[200px]">
+                <div class="flex justify-start items-center  ">
+                    <img class="w-[9px] h-[9px] m-4 mt-[25px]" src="./Снимок экрана 2026-02-19 080258.png" alt="">
+                    <p class="lg:text-[24px] md:text-[24px] text-[14px] text-[#575757] font-[400] pr-10">
+                        Для коммерческих организаций до 100 сотрудников
+                    </p>
+                </div>
+
+                <div class="flex justify-start items-center">
+                    <img class="w-[9px] h-[9px] m-4 mt-[25px]" src="./Снимок экрана 2026-02-19 080258.png" alt="">
+                    <p class="lg:text-[24px] md:text-[24px] text-[14px] font-[400] text-[#575757]">
+                        ООО на УСН, ОСНО
+                    </p>
+                </div>
+
+                <div class="flex justify-start items-center">
+                    <img class="w-[9px] h-[9px] m-4 mt-[25px]" src="./Снимок экрана 2026-02-19 080258.png" alt="">
+                    <p class="lg:text-[24px] md:text-[24px] text-[14px] font-[400] text-[#575757]">
+                        ИП на УСН, ПСН
+                    </p>
+                </div>
+
+                <div class="flex justify-start items-center">
+                    <img class="w-[9px] h-[9px] m-4 mt-[25px]" src="./Снимок экрана 2026-02-19 080258.png" alt="">
+                    <p class="lg:text-[24px] md:text-[24px] text-[14px] font-[400] text-[#575757] pr-10 ">
+                       Без тяжелых и вредных условий труда
+                    </p>
+                </div>
+            </div>
+        </div>
+
+
+        <img class="lg:w-[586px] lg:h-[500px] md:w-[568px] md:h-[475px] w-[344px] h-[287px]" src="./Frame (13).png"
             alt="">
     </div>
 
